# universities-llm-parser

./: .env.example  README.md  country_universities_llm.py  pyproject.toml  run_all_universities.py  universities_plan copy.txt  universities_plan.txt
app_io/: checkpoint.py  writers.py
domain/: country_map.py  dto.py  enums.py
out_old/: australia-universities.json  canada-universities.json  china-universities.json  czech-republic-universities.json  italy-universities.json  japan-universities.json  poland-universities.json  russia-universities.json  singapore-universities.json  south-korea-universities.json  spain-universities.json  turkey-universities.json  united-kingdom-universities.json  usa-universities.json  германия-universities.json  казахстан-universities.json  франция-universities.json
providers/: openai_llm_provider.py
services/: normalize.py
uni_names/: australia.txt  canada.txt  china.txt  czech.txt  france.txt  germany.txt  italy.txt  japan.txt  kazakhstan.txt  poland.txt  russian.txt  singapore.txt  south_korea.txt  spain.txt  turkey.txt  uk_unis.txt  usa.txt
